Back out "chore(deps): update ubuntu docker tag to v24"
This backs out commit e4ff0a11994990b287346e1c34abba2a0b832b6d.

--- a/kustomization/overlays/prod/dns/kustomization.yml
+++ b/kustomization/overlays/prod/dns/kustomization.yml
@@ -15,7 +15,7 @@ generatorOptions:
     app.kubernetes.io/name: bind9
 images:
   - name: ubuntu
-    newTag: "24.04@sha256:72297848456d5d37d1262630108ab308d3e9ec7ed1c3286a32fe09856619a782"
+    newTag: "22.04"
   - name: ubuntu/bind9
     newTag: 9.18-22.04_beta
 namespace: dns
