--- a/kustomization/components/ara/deployment.yml
+++ b/kustomization/components/ara/deployment.yml
@@ -52,6 +52,38 @@ spec:
             - mountPath: /opt/ara
               name: settings
               readOnly: true
+      initContainers:
+        - command:
+            - sh
+            - -c
+            - until pg_isready; do echo "waiting for database ${PGHOST}..."; sleep 10; done;
+          env:
+            - name: PGHOST
+              value: ara-database-16-pg
+            - name: PGPASSWORD
+              valueFrom:
+                secretKeyRef:
+                  key: password
+                  name: ara-owner-user.ara-database-16-pg.credentials.postgresql.acid.zalan.do
+            - name: PGSSLMODE
+              value: require
+            - name: PGUSER
+              valueFrom:
+                secretKeyRef:
+                  key: username
+                  name: ara-owner-user.ara-database-16-pg.credentials.postgresql.acid.zalan.do
+          image: postgres
+          name: wait-for-ara-pg-is-ready
+          securityContext:
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - ALL
+            readOnlyRootFilesystem: true
+            runAsNonRoot: true
+            runAsUser: 65534
+            seccompProfile:
+              type: RuntimeDefault
       volumes:
         - configMap:
             name: settings-configmap
