--- a/kustomization/overlays/prod/ara/kustomization.yml
+++ b/kustomization/overlays/prod/ara/kustomization.yml
@@ -9,6 +9,9 @@ configMapGenerator:
     files:
       - configmap/settings.yml
 namespace: ara
+images:
+  - name: postgres
+    newTag: 16@sha256:a35ec42526e3c522eb13b4d82eddaee875d0ac6ca9eb5cc5607e412854478c71
 patches:
   - path: patches/add_address_in_job_env.yml
     target:
