feat: wait for postgres to be ready for atuin

--- a/kustomization/overlays/prod/atuin/kustomization.yml
+++ b/kustomization/overlays/prod/atuin/kustomization.yml
@@ -9,6 +9,8 @@ images:
     newTag: 1.37.0@sha256:a5d0ce49aa801d475da48f8cb163c354ab95cab073cd3c138bd458fc8257fbf1
   - name: ghcr.io/atuinsh/atuin
     newTag: v18.4.0@sha256:8c6fa0aea944bf2a39665c9c69df1c2c0f9c05207bda5b942d450142285e3ee1
+  - name: postgres
+    newTag: 16@sha256:a35ec42526e3c522eb13b4d82eddaee875d0ac6ca9eb5cc5607e412854478c71
 namespace: atuin
 patches:
   - path: patches/set_config_env.yml
