--- a/kustomization/overlays/prod/homeassistant/patches/homeassistant/setup_config.yml
+++ b/kustomization/overlays/prod/homeassistant/patches/homeassistant/setup_config.yml
@@ -35,3 +35,34 @@ spec:
             - name: RECORDER_SCHEME
               value: postgresql
           name: generate-config
+        - command:
+            - sh
+            - -c
+            - until pg_isready; do echo "waiting for database ${PGHOST}..."; sleep 10; done;
+          env:
+            - name: PGHOST
+              value: homeassistant-recorder-16-pg
+            - name: PGPASSWORD
+              valueFrom:
+                secretKeyRef:
+                  key: password
+                  name: homeassistant-owner-user.homeassistant-recorder-16-pg.credentials.postgresql.acid.zalan.do
+            - name: PGSSLMODE
+              value: require
+            - name: PGUSER
+              valueFrom:
+                secretKeyRef:
+                  key: username
+                  name: homeassistant-owner-user.homeassistant-recorder-16-pg.credentials.postgresql.acid.zalan.do
+          image: postgres
+          name: wait-for-homeassistant-pg-is-ready
+          securityContext:
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - ALL
+            readOnlyRootFilesystem: true
+            runAsNonRoot: true
+            runAsUser: 65534
+            seccompProfile:
+              type: RuntimeDefault
