--- a/kustomization/overlays/prod/paperless/kustomization.yml
+++ b/kustomization/overlays/prod/paperless/kustomization.yml
@@ -11,6 +11,8 @@ images:
     digest: sha256:58b59656f36b025da79ee7a71ee4aeffe8a472b23aaf86bf0e27394460180d82
   - name: gotenberg/gotenberg
     newTag: 8.17.1@sha256:46e7b68adeadda1794a9ab194f1e2939f5b09ff21aadef6000e84102c9af6dd5
+  - name: postgres
+    newTag: 16@sha256:a35ec42526e3c522eb13b4d82eddaee875d0ac6ca9eb5cc5607e412854478c71
   - name: quay.io/opstree/redis
     newTag: v7.2.7@sha256:aa3cec3f6c136bb8875bf2a183801eab5c94d560e45c40006d8c5c870e7122ba
 namespace: paperless
