fix: do not specify a namespace for alertmanager discovery

--- a/kustomization/components/prometheus/prometheus.yml
+++ b/kustomization/components/prometheus/prometheus.yml
@@ -6,8 +6,7 @@ metadata:
 spec:
   alerting:
     alertmanagers:
-      - namespace: prometheus
-        name: alertmanager-operated
+      - name: alertmanager-operated
         port: web
   podMonitorNamespaceSelector: {}
   podMonitorSelector: {}
