fix: simplify dns for transmission
There's no need to talk to cluster stuff, so everything can go over the
wireguard tunnel.

--- a/kustomization/overlays/prod/transmission/kustomization.yml
+++ b/kustomization/overlays/prod/transmission/kustomization.yml
@@ -5,10 +5,9 @@ kind: Kustomization
 components:
   - ../../../components/transmission
 configMapGenerator:
-  - name: dnsmasq-configmap
+  - name: protonvpn-configmap
     files:
-      - configmap/dnsmasq/dnsmasq.conf
-      - configmap/dnsmasq/resolv.conf
+      - configmap/protonvpn/resolv.conf
   - name: wireguard-scripts-configmap
     files:
       - configmap/scripts/setup_wireguard.sh
