--- a/kustomization/overlays/prod/traefik/configmap/traefik/dynamic.yml
+++ b/kustomization/overlays/prod/traefik/configmap/traefik/dynamic.yml
@@ -4,6 +4,8 @@ http:
     crowdsec:
       plugin:
         crowdsec-bouncer:
+          crowdsecAppsecEnabled: true
+          crowdsecAppsecHost: localhost:7422
           crowdsecLapiHost: {{expandenv "$POD_IP:8081"}}
           crowdsecLapiKeyFile: /etc/treafik/crowdsec-api-key
           crowdsecLapiScheme: http
