feat: integrate immich into crowdsec
This is required before it is exposed more broadly.

--- a/kustomization/overlays/prod/traefik/patches/crowdsec/add_container.yml
+++ b/kustomization/overlays/prod/traefik/patches/crowdsec/add_container.yml
@@ -14,7 +14,7 @@ spec:
             - /scripts/entrypoint.sh
           env:
             - name: COLLECTIONS
-              value: crowdsecurity/traefik LePresidente/authelia
+              value: crowdsecurity/traefik gauth-fr/immich LePresidente/authelia
             - name: DB_PASSWORD
               valueFrom:
                 secretKeyRef:
