--- a/kustomization/overlays/prod/traefik/kustomization.yml
+++ b/kustomization/overlays/prod/traefik/kustomization.yml
@@ -14,6 +14,7 @@ configMapGenerator:
   - name: crowdsec-acquisitions-configmap
     files:
       - configmap/crowdsec/acquis.d/authelia.yaml
+      - configmap/crowdsec/acquis.d/immich.yaml
       - configmap/crowdsec/acquis.d/traefik.yaml
   - name: crowdsec-scripts-configmap
     files:
