--- a/kustomization/overlays/prod/immich/ingress.yml
+++ b/kustomization/overlays/prod/immich/ingress.yml
@@ -3,10 +3,10 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: websecure
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure,websecure-ext
     traefik.ingress.kubernetes.io/router.middlewares: traefik-forwardauth-authelia-middleware@kubernetescrd
     traefik.ingress.kubernetes.io/router.tls: "true"
-  name: lg-ingress
+  name: immich-ingress
 spec:
   rules:
     - host: immich.tswn.us
