--- a/kustomization/overlays/prod/traefik/configmap/traefik/dynamic.yml
+++ b/kustomization/overlays/prod/traefik/configmap/traefik/dynamic.yml
@@ -6,7 +6,7 @@ http:
         crowdsec-bouncer:
           banHTMLFilePath: /pages/ban.html
           crowdsecAppsecEnabled: true
-          crowdsecAppsecHost: localhost:7422
+          crowdsecAppsecHost: {{expandenv "$POD_IP:7422"}}
           crowdsecLapiHost: {{expandenv "$POD_IP:8081"}}
           crowdsecLapiKeyFile: /etc/treafik/crowdsec-api-key
           crowdsecLapiScheme: http
