feat: add a ban page so it's more clear when appsec if firing

--- a/kustomization/overlays/prod/traefik/configmap/traefik/dynamic.yml
+++ b/kustomization/overlays/prod/traefik/configmap/traefik/dynamic.yml
@@ -4,6 +4,7 @@ http:
     crowdsec:
       plugin:
         crowdsec-bouncer:
+          banHTMLFilePath: /pages/ban.html
           crowdsecAppsecEnabled: true
           crowdsecAppsecHost: localhost:7422
           crowdsecLapiHost: {{expandenv "$POD_IP:8081"}}
