feat: ingest navidrome logs into crowdsec
While we are not yet exposing it to the wider world, this is harmless to
do now so it's ready when we do.

--- a/kustomization/overlays/prod/traefik/kustomization.yml
+++ b/kustomization/overlays/prod/traefik/kustomization.yml
@@ -16,6 +16,7 @@ configMapGenerator:
       - configmap/crowdsec/acquis.d/appsec.yaml
       - configmap/crowdsec/acquis.d/authelia.yaml
       - configmap/crowdsec/acquis.d/immich.yaml
+      - configmap/crowdsec/acquis.d/navidrome.yaml
       - configmap/crowdsec/acquis.d/traefik.yaml
   - name: crowdsec-pages-configmap
     files:
