--- a/kustomization/overlays/prod/traefik/configmap/authelia/config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia/config.yml
@@ -49,6 +49,10 @@ access_control:
         - man
         - 10.117.0.24 # monitor.house.gem.hogs.tswn.us
       policy: bypass
+    - domain: argo-cd.hogs.tswn.us
+      networks:
+        - home
+      policy: bypass
     - domain: atuin.tswn.us
       policy: bypass
     - domain: homeassistant.hogs.tswn.us
