fix: use scheme redirect instead of endpoint
Since we do not use the default https port, the port was being added to
redirects, causing broken urls internally.

--- a/kustomization/overlays/prod/traefik/configmap/traefik/static.yml
+++ b/kustomization/overlays/prod/traefik/configmap/traefik/static.yml
@@ -27,10 +27,8 @@ entryPoints:
   web:
     address: :9080
     http:
-      redirections:
-        entryPoint:
-          scheme: https
-          to: websecure
+      middlewares:
+        - to-https@file
   websecure:
     address: :8443
   websecure-ext:
