--- a/kustomization/overlays/prod/atuin/scale-up.yml
+++ b/kustomization/overlays/prod/atuin/scale-up.yml
@@ -21,7 +21,7 @@
         state: present
         resource_definition:
           apiVersion: apps/v1
-          kind: Atuin
+          kind: Deployment
           metadata:
             name: "{{ (lookup('file', '../../../components/atuin/deployment.yml') | from_yaml).metadata.name }}"
             namespace: "{{ k8s_namespace }}"
