fix: typo in scale-up

--- a/kustomization/overlays/prod/prometheus-operator/scale-up.yml
+++ b/kustomization/overlays/prod/prometheus-operator/scale-up.yml
@@ -8,7 +8,7 @@
         state: present
         resource_definition:
           apiVersion: apps/v1
-          kind: Atuin
+          kind: Deployment
           metadata:
             name: prometheus-operator
             namespace: "{{ k8s_namespace }}"
