--- a/kustomization/overlays/prod/argo-proj/kustomization.yml
+++ b/kustomization/overlays/prod/argo-proj/kustomization.yml
@@ -7,6 +7,7 @@ components:
 namespace: argocd
 resources:
   - project.yml
+  - application/3d-printing.yml
   - application/ara.yml
   - application/argo-cd.yml
   - application/argo-proj.yml
