--- a/plays/k8s/scale-down.yml
+++ b/plays/k8s/scale-down.yml
@@ -3,6 +3,7 @@
 - ansible.builtin.import_playbook: ../../kustomization/overlays/prod/prometheus-operator/scale-down.yml
 - ansible.builtin.import_playbook: ../../kustomization/overlays/prod/redis/scale-down.yml
 # Scale down any application that uses longhorn storage.
+- ansible.builtin.import_playbook: ../../kustomization/overlays/prod/3d-printing/scale-down.yml
 - ansible.builtin.import_playbook: ../../kustomization/overlays/prod/ara/scale-down.yml
 - ansible.builtin.import_playbook: ../../kustomization/overlays/prod/atuin/scale-down.yml
 - ansible.builtin.import_playbook: ../../kustomization/overlays/prod/aventertainment/scale-down.yml
