--- a/plays/k8s/scale-up.yml
+++ b/plays/k8s/scale-up.yml
@@ -4,6 +4,7 @@
 - ansible.builtin.import_playbook: ../../kustomization/overlays/prod/traefik/scale-up.yml
 
 - ansible.builtin.import_playbook: ../../kustomization/overlays/prod/prometheus-operator/scale-up.yml
+- ansible.builtin.import_playbook: ../../kustomization/overlays/prod/3d-printing/scale-up.yml
 - ansible.builtin.import_playbook: ../../kustomization/overlays/prod/ara/scale-up.yml
 - ansible.builtin.import_playbook: ../../kustomization/overlays/prod/atuin/scale-up.yml
 - ansible.builtin.import_playbook: ../../kustomization/overlays/prod/aventertainment/scale-up.yml
