feat: postgres-operator update
This update does a few things:
1) Moves from the postgresql `namespace` to `postgres-operator`.
2) Deploys minio with the operator, and configures users with that.
3) Adds codegen capabilities with checks for secrets for minio setup.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,6 +10,9 @@
             "extensions": [
                 "nefrob.vscode-just-syntax"
             ],
+            "files.readonlyInclude": {
+                "kustomization/components/codegen-*/**": true
+            },
             "settings": {
                 "yaml.customTags": [
                     "!vault scalar"
