--- a/kustomization/overlays/prod/postgres-operator/patches/postgres-operator/add_logical_backup.yml
+++ b/kustomization/overlays/prod/postgres-operator/patches/postgres-operator/add_logical_backup.yml
@@ -8,7 +8,7 @@ configuration:
     logical_backup_cronjob_environment_secret: postgres-logical-backup-environment-secret
     logical_backup_provider: s3
     logical_backup_s3_bucket: set-in-secret-not-here
-    logical_backup_s3_endpoint: http://minio-svc.postgresql.svc.cluster.local:9000
+    logical_backup_s3_endpoint: http://postgres-backup-tenant-hl.postgres-operator.svc.cluster.local:9000
     logical_backup_s3_retention_time: 3 days
     logical_backup_s3_sse: ""
     logical_backup_schedule: 15 11 * * * # UTC
