--- a/kustomization/overlays/prod/postgres-operator/namespace.yml
+++ b/kustomization/overlays/prod/postgres-operator/namespace.yml
@@ -3,8 +3,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
-    pod-security.kubernetes.io/enforce: baseline
+    pod-security.kubernetes.io/enforce: restricted
     pod-security.kubernetes.io/enforce-version: latest
     pod-security.kubernetes.io/warn: restricted
     pod-security.kubernetes.io/warn-version: latest
-  name: postgresql
+  name: this-is-ignored-but-is-required
