--- a/kustomization/components/postgresql-operator/kustomization.yml
+++ b/kustomization/components/postgresql-operator/kustomization.yml
@@ -3,6 +3,10 @@ apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 
 patches:
+  - path: patches/allow_in_restricted_namespace.yml
+    target:
+      kind: Deployment
+      name: postgres-operator
   - path: patches/set_better_default_configuration.yml
     target:
       kind: OperatorConfiguration
