feat: add pdf-tools to dns

--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -236,6 +236,7 @@ bind_zones:
           - nextcloud
           - opensprinkler.hogs
           - paperless.hogs
+          - pdf-tools.hogs
           - prometheus.hogs
           - smtp.hogs
           - spoolman.hogs
