--- a/renovate.json
+++ b/renovate.json
@@ -261,9 +261,20 @@
       "versioning": "regex:^v?(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-k3sv\\d+\\.\\d+\\.\\d+\\+k3s\\d+$"
     },
     {
+      "automerge": true,
+      "automergeType": "branch",
       "groupName": "penpot",
       "matchPackageNames": [
         "penpotapp/**"
+      ],
+      "matchUpdateTypes": [
+        "digest",
+        "minor",
+        "patch"
+      ],
+      "minimumReleaseAge": "7 days",
+      "schedule": [
+        "after 4pm every weekday"
       ]
     },
     {
