--- a/kustomization/overlays/experimental/minio-operator/kustomization.yml
+++ b/kustomization/overlays/experimental/minio-operator/kustomization.yml
@@ -2,6 +2,15 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+helmCharts:
+  - name: crds
+    version: 3.0.1
+    repo: https://benfiola.github.io/minio-operator-ext/charts
+    releaseName: minio-operator-ext-crds
+  - name: operator
+    version: 3.0.1
+    repo: https://benfiola.github.io/minio-operator-ext/charts
+    releaseName: minio-operator-ext-operator
 namespace: minio-operator
 resources:
   # renovate: datasource=github-releases
