feat: Update dns codegen
This updates DNS codegen to be more like the newly added
postgres-operator's logical backup codegen.

--- a/kustomization/components/codegen-hogs-bind9-config/kustomization.yml
+++ b/kustomization/components/codegen-hogs-bind9-config/kustomization.yml
@@ -1,9 +1,5 @@
-#
-# Ansible managed
-#
-#
-# plays/dns/templates/kustomization.yml.j2
-#
+# @codegen-command: ansible-playbook plays/dns/update.yml 
+# @generated
 ---
 apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
