--- a/kustomization/overlays/prod/argo-proj/kustomization.yml
+++ b/kustomization/overlays/prod/argo-proj/kustomization.yml
@@ -3,36 +3,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 components:
+  - ../../../components/codegen-argo-cd-applications-prod
+  # There's not a great spot to include this, alas!
   - https://github.com/marinatedconcrete/config/kustomization/components/priorityclass?ref=kustomize-priorityclass@v1.0.3
 namespace: argocd
 resources:
+  - application.yml
   - project.yml
-  - application/3d-printing.yml
-  - application/ara.yml
-  - application/argo-cd.yml
-  - application/argo-proj.yml
-  - application/atuin.yml
-  - application/aventertainment.yml
-  - application/cert-manager.yml
-  - application/dns.yml
-  - application/external-services.yml
-  - application/factorio-relic.yml
-  - application/generic-device-plugin.yml
-  - application/homeassistant.yml
-  - application/immich.yml
-  - application/kube-vip.yml
-  - application/lg.yml
-  - application/longhorn.yml
-  - application/manyfold.yml
-  - application/node-monitoring.yml
-  - application/paperless.yml
-  - application/postgres-operator.yml
-  - application/prometheus-operator.yml
-  - application/proton-mail.yml
-  - application/redis.yml
-  - application/traefik.yml
-  - application/transmission.yml
-  - application/tvheadend.yml
-  - application/unifi.yml
-  - application/valheim-forerunner.yml
-  - application/valheim-relic.yml
