fix: use working monitoring for minio and prometheus
Getting the operator to do this is a bit of a pain, and not well
documented.  This falls back to adding scrape configs as the minio docs
suggest.

--- a/kustomization/components/prometheus/prometheus.yml
+++ b/kustomization/components/prometheus/prometheus.yml
@@ -22,6 +22,8 @@ spec:
     seccompProfile:
       type: RuntimeDefault
   serviceAccountName: prometheus-service-account
+  scrapeConfigNamespaceSelector: {}
+  scrapeConfigSelector: {}
   serviceMonitorNamespaceSelector: {}
   serviceMonitorSelector: {}
   storage:
