--- a/renovate.json
+++ b/renovate.json
@@ -82,13 +82,12 @@
       "customType": "regex",
       "datasourceTemplate": "docker",
       "fileMatch": [
-        "^kustomization/components/.+/postgresql(?:/.+?)?\\.yml$",
         "^kustomization/components/.+/tenant(?:/.+?)?\\.yml$",
-        "^kustomization/overlays/.+/.+/postgresql(?:/.+?)?\\.yml$",
         "^kustomization/overlays/.+/.+/tenant(?:/.+?)?\\.yml$"
       ],
       "matchStrings": [
-        "image:\\s+(?<depName>.+?):(?<currentValue>.+?)(?:@sha256:(?<currentDigest>[0-9a-f]+))?$"
+        "image:\\s+(?<depName>.+?):(?<currentValue>.+?)$",
+        "image:\\s+(?<depName>.+?):(?<currentValue>.+?):@sha256:(?<currentDigest>[0-9a-f]+)$"
       ],
       "versioningTemplate": "docker"
     },
