--- a/renovate.json
+++ b/renovate.json
@@ -87,7 +87,7 @@
       ],
       "matchStrings": [
         "image:\\s+(?<depName>.+?):(?<currentValue>.+?)$",
-        "image:\\s+(?<depName>.+?):(?<currentValue>.+?):@sha256:(?<currentDigest>[0-9a-f]+)$"
+        "image:\\s+(?<depName>.+?):(?<currentValue>.+?)@sha256:(?<currentDigest>[0-9a-f]+)$"
       ],
       "versioningTemplate": "docker"
     },
