fix: manual version bump of minio since renovate does not think there is one

--- a/renovate.json
+++ b/renovate.json
@@ -86,7 +86,8 @@
         "^kustomization/overlays/.+/.+/tenant(?:/.+?)?\\.yml$"
       ],
       "matchStrings": [
-        "image:\\s+(?<depName>.+?):(?<currentValue>.+?)$"
+        "image:\\s+(?<depName>.+?):(?<currentValue>.+?)$",
+        "image:\\s+(?<depName>.+?):(?<currentValue>.+?)@sha256:(?<currentDigest>[0-9a-f]+)$"
       ],
       "versioningTemplate": "docker"
     },
