--- a/kustomization/overlays/prod/postgres-operator/tenant.yml
+++ b/kustomization/overlays/prod/postgres-operator/tenant.yml
@@ -6,7 +6,7 @@ metadata:
 spec:
   configuration:
     name: minio-storage-configuration-secret
-  image: quay.io/minio/minio:RELEASE.2025-04-08T15-41-24Z@sha256:8834ae47a2de3509b83e0e70da9369c24bbbc22de42f2a2eddc530eee88acd1b
+  image: quay.io/minio/minio:latest@sha256:8834ae47a2de3509b83e0e70da9369c24bbbc22de42f2a2eddc530eee88acd1b
   pools:
     - containerSecurityContext:
         allowPrivilegeEscalation: false
