feat: setup dns for a matrix server

--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -228,6 +228,7 @@ bind_zones:
           - loki.hogs
           - longhorn.hogs
           - manyfold.hogs
+          - matrix
           - minio-monitoring.hogs
           - minio-postgres.hogs
           - mqtt.hogs
