fix: handle syntax change for volume claim templates
This is testing to make sure this fixes it generally, but since I moved
to server side apply for all applications with argocd, most things are
out of sync due to missing these two lines.

--- a/kustomization/components/spoolman/statefulset.yml
+++ b/kustomization/components/spoolman/statefulset.yml
@@ -59,7 +59,9 @@ spec:
       securityContext:
         fsGroup: 65534
   volumeClaimTemplates:
-    - metadata:
+    - apiVersion: v1
+      kind: PersistentVolumeClaim
+      metadata:
         name: spoolman-data
       spec:
         accessModes:
